styling of currentsearch.js done 1. content with styling achieved 2. found one bug that clicking on the 'connect!' button breaks the page, will investigate after styling of entire project is completed

--- a/connected-app/src/App.css
+++ b/connected-app/src/App.css
@@ -9,9 +9,10 @@
   text-align: center;
 }
 
-.header {
+.corner-time {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  padding-right: 40px;
 }
 
 /* remove underlines from links, font styling */
@@ -19,17 +20,39 @@
   text-decoration: none;
   font-family: 'Nunito', sans-serif;
   font-size: 25px;
+  color: rgb(255, 255, 255);
+}
+
+.header {
+  display: flex;
+  justify-content: space-around;
+  /* margin-top: 10px; */
+  padding-top: 3px;
+  padding-bottom: 3px;
+  background: rgb(80, 80, 80);
+}
+
+.header button {
+  background: none;
+  border-radius: 10px;
+  border-width: 0px;
+}
+
+.header button:hover {
+  cursor: pointer;
+  background: rgb(100, 255, 255);
+  transition: all 0.3s ease;
+}
+
+.weather-tab:hover, .historical-tab:hover, .about-tab:hover {
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  transition: all 0.3s ease;
 }
 
 /* hide about tab on mobile view */
 .about-tab {
   display: none;
-}
-
-.corner-time {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 40px;
 }
 
 /* CurrentWeather styling */
@@ -39,7 +62,7 @@
   justify-content: space-around;
 }
 
-.app-intro {
+.app-intro, .user-greeting {
   font-family: 'Oxygen', sans-serif;
   font-size: 25px;
 }
@@ -61,6 +84,26 @@
 }
 
 /* CurrentSearch styling */
+
+.calltoaction {
+  font-family: 'Oxygen', sans-serif;
+  font-size: 25px;
+}
+
+.user-submit-button {
+  margin-left: 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  background-color: azure;
+}
+
+/* animation of submit button on hover */
+.user-submit-button:hover {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  transform: scale(1.2);
+  background-color: bisque;
+}
 
 .searchhistorylink {
   text-decoration: none;
